attempting cross bsd/gmake make file

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -4,25 +4,24 @@
   <head>
     <title>Crochet</title>
     <link rel="stylesheet" href="index.css">
+    <meta charset="utf-8"/>
   </head>
 
   <body>
     <div id="header">
-
+      asdf
     </div>
     <div id="watchlist">
       <div class="watchlist-element">
-        <span>SYMBOL</span>
-        <span>BID</span>
-        <span>ASK</span>
-        <span>PIPS</span>
+        <span>EUR/USD</span>
+        <span>1.12345</span>
+        <span>1.12346</span>
+        <span>1</span>
       </div>
     </div>
     <div id="placeholder">
-      <span>placeholder</span>
     </div>
     <div id="chart">
-      <span>chart</span>
     </div>
   </body>
 
