added a somehow decent website start

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -9,19 +9,71 @@
 
   <body>
     <div id="header">
-      asdf
+      - RISKI -
     </div>
-    <div id="watchlist">
-      <div class="watchlist-element">
+    <div id="header-bar">
+      <span>
         <span>EUR/USD</span>
-        <span>1.12345</span>
-        <span>1.12346</span>
-        <span>1</span>
+        <span>$0.00000</span>
+        <span>&#8593;</span>
+      </span>
+      <span>
+        <span>USD/JPY</span>
+        <span>$000.000</span>
+        <span>&#8595;</span>
+      </span>
+      <span>
+        <span>GBP/USD</span>
+        <span>$0.00000</span>
+        <span>&#8593;</span>
+      </span>
+      <span>
+        <span>AUD/USD</span>
+        <span>$0.00000</span>
+        <span>&#8593;</span>
+      </span>
+      <span>
+        <span>USD/CAD</span>
+        <span>$0.00000</span>
+        <span>&#8593;</span>
+      </span>
+      <span>
+        <span>USD/CNY</span>
+        <span>$0.00000</span>
+        <span>&#8593;</span>
+      </span>
+      <span>
+        <span>USD/CHF</span>
+        <span>$0.00000</span>
+        <span>&#8593;</span>
+      </span>
+      <span>
+        <span>USD/HKD</span>
+        <span>$0.00000</span>
+        <span>&#8593;</span>
+      </span>
+      <span>
+        <span>EUR/GBP</span>
+        <span>$0.00000</span>
+        <span>&#8593;</span>
+      </span>
+      <span>
+        <span>USD/KRW</span>
+        <span>$0.00000</span>
+        <span>&#8593;</span>
+      </span>
+    </div>
+    <div id="security-bar">
+      <div id="exchange">
+        <div id="exchange-logo">
+          <img src="https://www.oanda.com/assets/images/oanda-icon.svg" alt="OANDA"/>
+        </div>
+        <div id="exchange-text">
+          <input id="exchange-exchange"/>
+          <span></span>
+          <input id="exchange-security"/>
+        </div>
       </div>
-    </div>
-    <div id="placeholder">
-    </div>
-    <div id="chart">
     </div>
   </body>
 
