--- a/webroot/index.html
+++ b/webroot/index.html
@@ -9,35 +9,25 @@
 
   <body>
     <div id="header-bar">
-      <span>
+      <span id="header-bar-EUR_USD">
         <span>EUR/USD</span>
         <span>$0.00000</span>
-        <span>&#8593;</span>
       </span>
-      <span>
+      <span id="header-bar-USD_JPY">
         <span>USD/JPY</span>
         <span>$000.000</span>
-        <span>&#8595;</span>
       </span>
-      <span>
+      <span id="header-bar-GBP_USD">
         <span>GBP/USD</span>
         <span>$0.00000</span>
-        <span>&#8593;</span>
       </span>
-      <span>
+      <span id="header-bar-AUD_USD">
         <span>AUD/USD</span>
         <span>$0.00000</span>
-        <span>&#8593;</span>
       </span>
-      <span>
+      <span id="header-bar-USD_CAD">
         <span>USD/CAD</span>
         <span>$0.00000</span>
-        <span>&#8593;</span>
-      </span>
-      <span>
-        <span>USD/CNY</span>
-        <span>$0.00000</span>
-        <span>&#8593;</span>
       </span>
     </div>
     <div id="header">
@@ -45,39 +35,31 @@
       - RISKI -
       </span>
       <div id="navigation-bar">
-        <span>If you let me read the charts, I will let you form opinions.</span>
+        <span>
+          If you let me read the charts, I will let you form opinions.
+        </span>
       </div>
     </div>
     <div id="security-bar">
       <div id="exchange">
         <div id="exchange-logo">
-          <img src="https://www.oanda.com/assets/images/oanda-icon.svg" alt="OANDA"/>
+          <img src="glyfs/up-down-dropdown.svg" alt="DROPDOWN" />
+          <img src="https://www.oanda.com/assets/images/oanda-icon.svg"
+               alt="OANDA"/>
         </div>
         <div id="exchange-text">
-          <input id="exchange-exchange" spellcheck="false" value="OANDA"/>
-          <span></span>
-          <input id="exchange-security" spellcheck="false" value="EURUSD"/>
+          <input placeholder="EUR/USD">
         </div>
-        <div id="exchange-button">
-          <img src="glyfs/iconmonstr-search-thin.svg" alt="search"/>
-        </div>
-      </div>
-      <div id="options">
-        <span>Health</span>
-        <span>Detailed Report</span>
       </div>
     </div>
     <div id="dash">
-      <div id="news-feed">
-        news feed
+      <div id="feed">
       </div>
       <div id="chart">
-        chart goes here
-      </div>
-      <div id="alerts">
-        put something here idk
+        <canvas id="chart-drawable" />
       </div>
     </div>
   </body>
   <script src="comms.js"></script>
+  <script src="chart.js"></script>
 </html>
