--- a/webroot/index.html
+++ b/webroot/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>RISKI - Financial Hardship</title>
+    <link rel="stylesheet" href="solarized.css">
     <link rel="stylesheet" href="index.css">
     <meta charset="utf-8"/>
   </head>
