--- a/webroot/index.html
+++ b/webroot/index.html
@@ -9,53 +9,12 @@
   </head>
 
   <body>
-    <div id="header-bar">
-      <span id="header-bar-EUR_USD">
-        <span>EUR/USD</span>
-        <span>$0.00000</span>
-      </span>
-      <span id="header-bar-USD_JPY">
-        <span>USD/JPY</span>
-        <span>$000.000</span>
-      </span>
-      <span id="header-bar-GBP_USD">
-        <span>GBP/USD</span>
-        <span>$0.00000</span>
-      </span>
-      <span id="header-bar-AUD_USD">
-        <span>AUD/USD</span>
-        <span>$0.00000</span>
-      </span>
-      <span id="header-bar-USD_CAD">
-        <span>USD/CAD</span>
-        <span>$0.00000</span>
-      </span>
-    </div>
     <div id="header">
       <span id="header-name">
-      - RISKI -
+        RISKI
       </span>
-      <div id="navigation-bar">
-        <span>
-          If you let me read the charts, I will let you form opinions.
-        </span>
-      </div>
-    </div>
-    <div id="security-bar">
-      <div id="exchange">
-        <div id="exchange-logo">
-          <img src="glyfs/up-down-dropdown.svg" alt="DROPDOWN" />
-          <img src="https://www.oanda.com/assets/images/oanda-icon.svg"
-               alt="OANDA"/>
-        </div>
-        <div id="exchange-text">
-          <input placeholder="EUR/USD">
-        </div>
-      </div>
     </div>
     <div id="dash">
-      <div id="feed">
-      </div>
       <div id="chart">
         <canvas id="chart-drawable" />
       </div>
