simplified web design even more

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
     <title>RISKI - Financial Hardship</title>
-    <link rel="stylesheet" href="solarized.css">
-    <link rel="stylesheet" href="index.css">
     <meta charset="utf-8"/>
   </head>
 
   <body>
     <div id="header">
       <span id="header-name">
-        RISKI
+        -RISKI-
       </span>
     </div>
     <div id="dash">
@@ -20,6 +18,10 @@
       </div>
     </div>
   </body>
+
+  <link rel="stylesheet" href="solarized.css">
+  <link rel="stylesheet" href="index.css">
+
   <script src="comms.js"></script>
   <script src="chart.js"></script>
 </html>
