experimenting with header placements

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -8,9 +8,30 @@
 
   <body>
     <div id="header">
-      <span id="header-name">
-        -RISKI-
-      </span>
+      <div>
+      </div>
+      <div id="center-navigation">
+        <span id="header-name">
+          -RISKI-
+        </span>
+        <span id="sections">
+          <span>
+            Home
+          </span>
+          <span>
+            Reports
+          </span>
+          <span>
+            Scripts
+          </span>
+          <span>
+            Learn
+          </span>
+        </span>
+      </div>
+      <div>
+
+      </div>
     </div>
     <div id="dash">
       <div id="chart">
