added better visual

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -8,7 +8,12 @@
 
   <body>
     <div id="header">
-      <div>
+      <div id="search-container">
+        <div id="exchange-container">
+          <img src="glyfs/up-down-dropdown.svg" />
+          <img src="glyfs/oanda-icon.svg" />
+        </div>
+        <input id="security-text">
       </div>
       <div id="center-navigation">
         <span id="header-name">
@@ -29,8 +34,7 @@
           </span>
         </span>
       </div>
-      <div>
-
+      <div id="misc-content">
       </div>
     </div>
     <div id="dash">
