enable changing of charts

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -13,7 +13,7 @@
           <img src="glyfs/up-down-dropdown.svg" />
           <img src="glyfs/oanda-icon.svg" />
         </div>
-        <input id="security-text">
+        <input id="security-text" value="EUR/USD">
       </div>
       <div id="center-navigation">
         <span id="header-name">
