made header html h1 header for SEO

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -17,20 +17,16 @@
       </div>
       <div id="center-navigation">
         <span id="header-name">
-          -RISKI-
+          <h1>-RISKI-</h1>
         </span>
         <span id="sections">
           <span>
-            Home
           </span>
           <span>
-            Reports
           </span>
           <span>
-            Scripts
           </span>
           <span>
-            Learn
           </span>
         </span>
       </div>
