useless seo probably to help the google indexer

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -3,7 +3,10 @@
 <html lang="en">
   <head>
     <title>RISKI - Financial Hardship</title>
-    <meta charset="utf-8"/>
+    <meta charset="UTF-8"/>
+    <meta name="keywords" content="github discord finance math algorithms quants">
+    <meta name="author" content="washcloth">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
