--- a/webroot/index.html
+++ b/webroot/index.html
@@ -11,40 +11,32 @@
 
   <body>
     <div id="header">
-
-      <div id="left-header">
-          <div id="search-container">
-              <div id="exchange-container">
-                <svg xmlns="http://www.w3.org/2000/svg" width="10.486" height="16.141" viewBox="0 0 10.486 16.141">
-  <path id="Union_12" data-name="Union 12" d="M-9945.05,16.263l-.038-.04-4.2-4.2a1,1,0,0,1,0-1.416,1,1,0,0,1,1.413,0l3.536,3.536,3.535-3.536a1,1,0,0,1,1.413,0,1,1,0,0,1,0,1.416l-4.242,4.242a.994.994,0,0,1-.706.292A1,1,0,0,1-9945.05,16.263Zm4.242-9.9-3.535-3.536-3.536,3.536a1,1,0,0,1-1.413,0,1,1,0,0,1,0-1.413l4.242-4.242a1,1,0,0,1,1.413,0l4.242,4.242a1,1,0,0,1,0,1.413.991.991,0,0,1-.706.294A1,1,0,0,1-9940.808,6.362Z" transform="translate(9949.586 -0.415)" fill="var(--base02)"/>
-</svg>
-                <img src="glyfs/oanda-icon.svg" />
-              </div>
-              <input id="security-text" value="EUR/USD">
-          </div>
+      -RISKI-
+    </div>
+    <div id="header-tools">
+      <div id="search-container">
+          <input id="security-text" value="EUR/USD">
       </div>
-
-      <div id="center-navigation">
-        <span id="header-name">
-          <h1>-RISKI-</h1>
-        </span>
-        <span id="sections">
-        </span>
+      <div id="navigation">
+        <span>Home</span>
+        <span>Research</span>
+        <span>News</span>
+        <span>Developer</span>
       </div>
-      <div id="misc-content">
-        <div>
-          <label class="switch">
-            <input type="checkbox" onclick="switchtheme()">
-            <span class="slider round"></span>
-          </label>
-        </div>
+      <div id="night-light">
+        <label class="switch">
+          <input type="checkbox" onclick="switchtheme()">
+          <span class="slider square"></span>
+        </label>
       </div>
     </div>
+
     <div id="dash">
       <div id="chart">
         <canvas id="chart-drawable" />
       </div>
     </div>
+
   </body>
 
   <link rel="stylesheet" href="solarized.css">
