--- a/webroot/index.html
+++ b/webroot/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div id="header">
-      -RISKI-
+      <h1>-RISKI-</h1>
     </div>
     <div id="header-tools">
       <div id="search-container">
